Fix z-index for scrollToTop button
[3.2]

ERM#16471

Please cherry-pick to master

(cherry picked from commit ec089dd2ce564cca879816009f40ed7b208b7d0d)

--- a/resources/stylesheets/component/common/scrollToTop.less
+++ b/resources/stylesheets/component/common/scrollToTop.less
@@ -1,7 +1,7 @@
 #bs-top {
 	font-size: 300%;
 	position: fixed;
-	z-index: 110;
+	z-index: 19;
 	visibility: hidden;
 	opacity: 0;
 	-webkit-transition: opacity .3s 0s, visibility 0s .3s;
